# PoreBlazer

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
Windows/HKUST1/: UFF.atoms
src/: Makefile_gfort  curand_utils.f90  poreblazer.f90
